feat(): Ajuste para java 11